include_directories(${CMAKE_SOURCE_DIR}/rpcserver ${CMAKE_SOURCE_DIR}/utility/config-reader ${CMAKE_SOURCE_DIR}/utility/logging ${CMAKE_SOURCE_DIR}/zkwrapper ${CMAKE_SOURCE_DIR}/zookeeper/include)

add_library(namenode_protos ClientNamenodeProtocolImpl.cc)
target_link_libraries( namenode_protos rpcserver )
target_link_libraries( namenode_protos zkwrapper )
target_link_libraries( namenode_protos rpcserver )
target_link_libraries( namenode_protos config )
target_link_libraries( namenode_protos easylogging++ )
target_link_libraries( namenode_protos protobuf )
target_link_libraries( namenode_protos pthread )
target_link_libraries( namenode_protos messages )
target_link_libraries( namenode_protos zk_client_nn )
target_link_libraries( namenode_protos /usr/local/lib/libzookeeper_mt.so )
target_link_libraries( namenode_protos ${Boost_LIBRARIES} )

add_executable(namenode main.cc Leases.cc)
target_link_libraries(namenode namenode_protos)
include_directories(${CMAKE_SOURCE_DIR}/rpcserver)
